--- a/src/noodle_inventory.html
+++ b/src/noodle_inventory.html
@@ -17,7 +17,7 @@
             font-family: 'Orbitron', sans-serif;
             color: #00ff88;
             min-height: 100vh;
-            overflow-x: hidden;
+            overflow-x: auto;
             position: relative;
         }
 
@@ -62,6 +62,10 @@
             font-weight: 700;
             transition: all 0.3s ease;
             border: 2px solid rgba(0, 255, 136, 0.5);
+            min-height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .home-link:hover {
@@ -109,12 +113,6 @@
             grid-template-columns: 1fr 1fr;
             gap: 30px;
             margin-bottom: 40px;
-        }
-
-        @media (max-width: 1024px) {
-            .main-content {
-                grid-template-columns: 1fr;
-            }
         }
 
         .panel {
@@ -182,6 +180,7 @@
             font-family: 'Orbitron', sans-serif;
             font-size: 12px;
             transition: all 0.3s ease;
+            min-height: 44px;
         }
 
         .form-group input:focus,
@@ -218,6 +217,7 @@
             letter-spacing: 1px;
             position: relative;
             overflow: hidden;
+            min-height: 44px;
         }
 
         button::before {
@@ -317,6 +317,8 @@
             margin-bottom: 10px;
             position: relative;
             z-index: 1;
+            gap: 10px;
+            flex-wrap: wrap;
         }
 
         .noodle-name {
@@ -377,6 +379,7 @@
             padding: 8px 12px;
             font-size: 10px;
             margin: 0;
+            min-height: 40px;
         }
 
         .status-badge {
@@ -491,6 +494,7 @@
             z-index: 10000;
             animation: slideIn 0.3s ease, slideOut 0.3s ease 2.7s;
             letter-spacing: 1px;
+            font-size: 12px;
         }
 
         .notification.error {
@@ -548,6 +552,7 @@
             text-transform: uppercase;
             transition: all 0.3s ease;
             letter-spacing: 1px;
+            min-height: 40px;
         }
 
         .filter-btn:hover,
@@ -568,13 +573,390 @@
             z-index: 100;
             pointer-events: none;
         }
+
+        /* Tablet breakpoint (768px) */
+        @media (max-width: 1024px) {
+            .main-content {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px 15px;
+            }
+
+            .header {
+                margin-bottom: 30px;
+            }
+
+            .header h1 {
+                font-size: 32px;
+                letter-spacing: 2px;
+                margin-bottom: 8px;
+            }
+
+            .header p {
+                font-size: 12px;
+                letter-spacing: 1px;
+            }
+
+            .panel {
+                padding: 20px;
+                border: 2px solid #00ff88;
+            }
+
+            .panel-title {
+                font-size: 14px;
+                margin-bottom: 15px;
+                letter-spacing: 1px;
+            }
+
+            .form-group label {
+                font-size: 11px;
+            }
+
+            .form-group input,
+            .form-group select {
+                font-size: 11px;
+                padding: 10px;
+            }
+
+            button {
+                font-size: 11px;
+                padding: 10px 15px;
+            }
+
+            .stat-value {
+                font-size: 24px;
+            }
+
+            .stat-label {
+                font-size: 10px;
+            }
+
+            .noodle-name {
+                font-size: 12px;
+            }
+
+            .noodle-quantity {
+                font-size: 11px;
+            }
+
+            .noodle-details {
+                font-size: 10px;
+            }
+
+            .noodle-actions button {
+                font-size: 9px;
+                padding: 6px 10px;
+                min-height: 38px;
+            }
+
+            .status-badge {
+                font-size: 9px;
+            }
+
+            .filter-btn {
+                font-size: 10px;
+                padding: 6px 12px;
+                min-height: 38px;
+            }
+
+            .notification {
+                top: 80px;
+                right: 10px;
+                left: 10px;
+                font-size: 11px;
+                padding: 12px 15px;
+                border-radius: 3px;
+            }
+
+            .empty-state-icon {
+                font-size: 40px;
+            }
+
+            .arcade-corner {
+                font-size: 10px;
+                bottom: 10px;
+                right: 10px;
+            }
+
+            .home-link {
+                font-size: 11px;
+                padding: 8px 15px;
+                top: 15px;
+                left: 15px;
+            }
+
+            .stats-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 15px;
+                margin-bottom: 30px;
+            }
+
+            .main-content {
+                gap: 20px;
+                margin-bottom: 30px;
+            }
+        }
+
+        /* Mobile breakpoint (480px) */
+        @media (max-width: 480px) {
+            body {
+                overflow-x: hidden;
+            }
+
+            .container {
+                padding: 15px 12px;
+                max-width: 100%;
+            }
+
+            .header {
+                margin-bottom: 20px;
+            }
+
+            .header h1 {
+                font-size: 24px;
+                letter-spacing: 1px;
+                margin-bottom: 5px;
+            }
+
+            .header p {
+                font-size: 10px;
+                letter-spacing: 0.5px;
+            }
+
+            .panel {
+                padding: 15px;
+                border: 2px solid #00ff88;
+                border-radius: 8px;
+            }
+
+            .panel-title {
+                font-size: 12px;
+                margin-bottom: 12px;
+                letter-spacing: 0.5px;
+            }
+
+            .form-group {
+                margin-bottom: 15px;
+            }
+
+            .form-group label {
+                font-size: 10px;
+                margin-bottom: 6px;
+            }
+
+            .form-group input,
+            .form-group select {
+                font-size: 10px;
+                padding: 10px;
+                min-height: 44px;
+                border-radius: 4px;
+            }
+
+            .button-group {
+                gap: 8px;
+                margin-top: 15px;
+            }
+
+            button {
+                font-size: 10px;
+                padding: 10px 12px;
+                min-height: 44px;
+                border-radius: 4px;
+            }
+
+            .stats-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 12px;
+                margin-bottom: 20px;
+            }
+
+            .stat-card {
+                padding: 15px;
+                border: 2px solid #ff00ff;
+                border-radius: 8px;
+            }
+
+            .stat-value {
+                font-size: 20px;
+                margin-bottom: 8px;
+            }
+
+            .stat-label {
+                font-size: 9px;
+            }
+
+            .main-content {
+                grid-template-columns: 1fr;
+                gap: 15px;
+                margin-bottom: 20px;
+            }
+
+            .noodle-item {
+                padding: 12px;
+                margin-bottom: 12px;
+                border-left: 3px solid #00ff88;
+            }
+
+            .noodle-header {
+                gap: 8px;
+                margin-bottom: 8px;
+            }
+
+            .noodle-name {
+                font-size: 11px;
+            }
+
+            .noodle-quantity {
+                font-size: 10px;
+                padding: 4px 8px;
+            }
+
+            .noodle-details {
+                grid-template-columns: 1fr 1fr;
+                gap: 8px;
+                margin-bottom: 8px;
+                font-size: 9px;
+            }
+
+            .detail-item {
+                padding: 6px;
+            }
+
+            .detail-label {
+                font-size: 8px;
+                margin-bottom: 2px;
+            }
+
+            .detail-value {
+                font-size: 9px;
+            }
+
+            .noodle-actions {
+                gap: 6px;
+            }
+
+            .noodle-actions button {
+                font-size: 9px;
+                padding: 6px 8px;
+                min-height: 40px;
+            }
+
+            .status-badge {
+                font-size: 8px;
+                padding: 3px 6px;
+                margin-top: 6px;
+            }
+
+            .filter-buttons {
+                gap: 8px;
+                margin-bottom: 15px;
+            }
+
+            .filter-btn {
+                font-size: 9px;
+                padding: 6px 10px;
+                min-height: 40px;
+                flex: 1;
+                min-width: calc(50% - 4px);
+            }
+
+            .notification {
+                top: 70px;
+                right: 8px;
+                left: 8px;
+                font-size: 10px;
+                padding: 10px 12px;
+            }
+
+            .empty-state {
+                padding: 30px 15px;
+            }
+
+            .empty-state-icon {
+                font-size: 36px;
+                margin-bottom: 15px;
+            }
+
+            .empty-state p {
+                font-size: 12px;
+            }
+
+            .empty-state p:last-child {
+                font-size: 10px;
+                margin-top: 8px;
+            }
+
+            .arcade-corner {
+                font-size: 8px;
+                bottom: 8px;
+                right: 8px;
+            }
+
+            .home-link {
+                font-size: 10px;
+                padding: 8px 12px;
+                top: 12px;
+                left: 12px;
+                min-height: 40px;
+            }
+        }
+
+        /* Extra small devices (360px and below) */
+        @media (max-width: 360px) {
+            .container {
+                padding: 12px 10px;
+            }
+
+            .header h1 {
+                font-size: 20px;
+            }
+
+            .header p {
+                font-size: 9px;
+            }
+
+            .panel {
+                padding: 12px;
+            }
+
+            .panel-title {
+                font-size: 11px;
+            }
+
+            .stats-grid {
+                gap: 10px;
+            }
+
+            .stat-value {
+                font-size: 18px;
+            }
+
+            .filter-btn {
+                font-size: 8px;
+                padding: 5px 8px;
+                min-width: calc(50% - 4px);
+            }
+
+            .noodle-header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .noodle-actions button {
+                font-size: 8px;
+            }
+        }
     </style>
 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2)">← Home</a>
+    <a href="../index.html" class="home-link">← Home</a>
 
     <div class="container">
         <div class="header">
@@ -751,150 +1133,4 @@
 
             noodleList.innerHTML = filtered.map(noodle => {
                 const status = getStatus(noodle.expiration);
-                const daysLeft = getDaysUntilExpiration(noodle.expiration);
-                let statusClass = `status-${status}`;
-                let statusText = status === 'expired' ? 'EXPIRED' : status === 'expiring' ? `${daysLeft} DAYS LEFT` : 'FRESH';
-                let itemClass = `noodle-item ${status === 'expired' ? 'expired' : status === 'expiring' ? 'expiring-soon' : ''}`;
-
-                return `
-                    <div class="${itemClass}">
-                        <div class="noodle-header">
-                            <div class="noodle-name">${noodle.name}</div>
-                            <div class="noodle-quantity">x${noodle.quantity}</div>
-                        </div>
-                        <div class="noodle-details">
-                            <div class="detail-item">
-                                <div class="detail-label">Type</div>
-                                <div class="detail-value">${noodle.type}</div>
-                            </div>
-                            <div class="detail-item">
-                                <div class="detail-label">Expires</div>
-                                <div class="detail-value">${formatDate(noodle.expiration)}</div>
-                            </div>
-                        </div>
-                        <div class="status-badge ${statusClass}">${statusText}</div>
-                        <div class="noodle-actions">
-                            <button onclick="updateQuantity('${noodle.id}', -1)" class="button-warning">-1</button>
-                            <button onclick="deleteNoodle('${noodle.id}')" class="button-danger">DELETE</button>
-                            <button onclick="updateQuantity('${noodle.id}', 1)">+1</button>
-                        </div>
-                    </div>
-                `;
-            }).join('');
-        }
-
-        function updateStats() {
-            const noodles = loadNoodles();
-            const totalNoodles = noodles.length;
-            const totalQuantity = noodles.reduce((sum, n) => sum + n.quantity, 0);
-            const expiringCount = noodles.filter(n => getStatus(n.expiration) === 'expiring').length;
-            const expiredCount = noodles.filter(n => getStatus(n.expiration) === 'expired').length;
-
-            document.getElementById('totalNoodles').textContent = totalNoodles;
-            document.getElementById('totalQuantity').textContent = totalQuantity;
-            document.getElementById('expiringCount').textContent = expiringCount;
-            document.getElementById('expiredCount').textContent = expiredCount;
-
-            // Update inventory status
-            const statusText = noodles.length === 0 
-                ? '<div style="color: rgba(0, 255, 136, 0.7);">Inventory is empty</div>'
-                : `
-                    <div>📦 Packages: <span style="color: #00ff88; font-weight: 700;">${totalNoodles}</span></div>
-                    <div>📊 Total Units: <span style="color: #00ff88; font-weight: 700;">${totalQuantity}</span></div>
-                    <div>⚡ Types: <span style="color: #00ff88; font-weight: 700;">${new Set(noodles.map(n => n.type)).size}</span></div>
-                `;
-            document.getElementById('inventoryStatus').innerHTML = statusText;
-
-            // Update alerts
-            let alertsHTML = '';
-            if (expiredCount > 0) {
-                alertsHTML += `<div>🚨 ${expiredCount} expired package(s)!</div>`;
-            }
-            if (expiringCount > 0) {
-                alertsHTML += `<div>⏰ ${expiringCount} expiring soon!</div>`;
-            }
-            if (alertsHTML === '') {
-                alertsHTML = '<div style="color: rgba(0, 255, 136, 0.7);">All good! No alerts.</div>';
-            }
-            document.getElementById('alertsStatus').innerHTML = alertsHTML;
-        }
-
-        function deleteNoodle(id) {
-            const noodles = loadNoodles();
-            const noodle = noodles.find(n => n.id === id);
-            const filtered = noodles.filter(n => n.id !== id);
-            saveNoodles(filtered);
-            showNotification(`Deleted ${noodle.name}!`, 'success');
-            renderNoodles();
-            updateStats();
-        }
-
-        function updateQuantity(id, change) {
-            const noodles = loadNoodles();
-            const noodle = noodles.find(n => n.id === id);
-            if (noodle) {
-                noodle.quantity += change;
-                if (noodle.quantity <= 0) {
-                    deleteNoodle(id);
-                } else {
-                    saveNoodles(noodles);
-                    showNotification(`${noodle.name}: ${noodle.quantity} units`, 'success');
-                    renderNoodles();
-                    updateStats();
-                }
-            }
-        }
-
-        function filterNoodles(filter) {
-            currentFilter = filter;
-            document.querySelectorAll('.filter-btn').forEach(btn => btn.classList.remove('active'));
-            event.target.classList.add('active');
-            renderNoodles();
-        }
-
-        function clearAllNoodles() {
-            if (confirm('🎮 ARE YOU SURE? This will delete all noodles! 🎮')) {
-                localStorage.removeItem(STORAGE_KEY);
-                showNotification('All noodles cleared!', 'warning');
-                renderNoodles();
-                updateStats();
-            }
-        }
-
-        document.getElementById('addNoodleForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-
-            const name = document.getElementById('noodleName').value.trim();
-            const type = document.getElementById('noodleType').value;
-            const quantity = parseInt(document.getElementById('noodleQuantity').value);
-            const expiration = document.getElementById('noodleExpiration').value;
-
-            if (!name || !type || !quantity || !expiration) {
-                showNotification('Please fill all fields!', 'error');
-                return;
-            }
-
-            const noodles = loadNoodles();
-            const newNoodle = {
-                id: generateId(),
-                name,
-                type,
-                quantity,
-                expiration
-            };
-
-            noodles.push(newNoodle);
-            saveNoodles(noodles);
-            showNotification(`Added ${name} to inventory!`, 'success');
-
-            this.reset();
-            renderNoodles();
-            updateStats();
-        });
-
-        // Initial render
-        renderNoodles();
-        updateStats();
-    </script>
-</body>
-</html>
+                const daysLeft = getDaysUntilExpiration(noodle.expiration
