--- a/index.html
+++ b/index.html
@@ -10,7 +10,175 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: linear-gradient(135deg, #1a1d23 0%, #252a32 100%);
+            color: #95c9ad;
+            font-family: 'Press Start 2P', cursive;
+            padding: 20px;
+            min-height: 100vh;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 60px;
+        }
+
+        h1 {
+            font-size: 2em;
+            color: #7dd3a0;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        }
+
+        .tagline {
+            font-size: 0.6em;
+            color: #5a9d7a;
+            margin-bottom: 30px;
+        }
+
+        .refresh-btn {
+            background: #7dd3a0;
+            color: #1a1d23;
+            border: 3px solid #5a9d7a;
+            padding: 10px 20px;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 0.5em;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+        }
+
+        .refresh-btn:hover {
+            background: #5a9d7a;
+            color: #7dd3a0;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.4);
+        }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+
+        .project-card {
+            background: #252a32;
+            border: 3px solid #5a9d7a;
+            padding: 20px;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+
+        .project-card:hover {
+            border-color: #7dd3a0;
+            box-shadow: 0 0 20px rgba(125, 211, 160, 0.3);
+            transform: translateY(-5px);
+        }
+
+        .project-card.add-project {
+            opacity: 0.7;
+            border-style: dashed;
+        }
+
+        .project-card.add-project:hover {
+            opacity: 1;
+        }
+
+        .project-icon {
+            font-size: 3em;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        .project-title {
+            font-size: 0.9em;
+            color: #7dd3a0;
+            margin-bottom: 10px;
+            word-break: break-word;
+            text-align: center;
+        }
+
+        .project-description {
+            font-size: 0.5em;
+            color: #95c9ad;
+            line-height: 1.4;
+            text-align: center;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 60px;
+            color: #5a9d7a;
+            font-size: 0.5em;
+            padding: 20px;
+            border-top: 2px solid #5a9d7a;
+        }
+
+        footer a {
+            color: #7dd3a0;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer a:hover {
+            color: #5a9d7a;
+        }
+
+        footer code {
+            background: #1a1d23;
+            padding: 2px 6px;
+            border: 1px solid #5a9d7a;
+        }
+
+        @media (max-width: 768px) {
+            .projects-grid {
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                gap: 15px;
+            }
+            h1 {
+                font-size: 1.4em;
+            }
+            .project-card {
+                padding: 15px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            body {
+                padding: 10px;
+            }
+            .projects-grid {
+                grid-template-columns: 1fr;
+            }
+            h1 {
+                font-size: 1em;
+            }
+            .project-title {
+                font-size: 0.7em;
+            }
+            .project-description {
+                font-size: 0.45em;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
