--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Sportello's Web Projects</title>
     <link rel="stylesheet" href="page-theme.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(135deg, #1a1d23 0%, #252a32 100%);
-            color: #95c9ad;
-            font-family: 'Press Start 2P', cursive;
+            background: #0a0a0a;
+            color: #00ff41;
+            font-family: 'Courier Prime', monospace;
             padding: 20px;
             min-height: 100vh;
         }
@@ -24,14 +24,15 @@
         }
         h1 {
             font-size: 2em;
-            color: #7dd3a0;
+            color: #ff0000;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            text-shadow: 0 0 20px rgba(255, 0, 0, 0.6);
         }
         .subtitle {
-            font-size: 0.6em;
-            color: #5a9d7a;
+            font-size: 0.7em;
+            color: #00ffff;
             margin-bottom: 30px;
+            letter-spacing: 1px;
         }
         .projects-grid {
             display: grid;
@@ -40,44 +41,49 @@
             margin-bottom: 40px;
         }
         .project-card {
-            background: #252a32;
-            border: 3px solid #5a9d7a;
+            background: rgba(26, 0, 0, 0.4);
+            border: 2px solid #ff0000;
             padding: 20px;
-            border-radius: 4px;
             transition: all 0.3s ease;
             cursor: pointer;
             box-shadow: 0 4px 6px rgba(0,0,0,0.3);
         }
         .project-card:hover {
-            border-color: #7dd3a0;
-            box-shadow: 0 0 20px rgba(125, 211, 160, 0.3);
+            border-color: #00ff41;
+            box-shadow: 0 0 20px rgba(0, 255, 65, 0.3);
             transform: translateY(-5px);
+            background: rgba(0, 255, 65, 0.1);
         }
         .project-card h3 {
             font-size: 0.9em;
-            color: #7dd3a0;
+            color: #00ffff;
             margin-bottom: 10px;
             word-break: break-word;
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
         }
         .project-card p {
-            font-size: 0.5em;
-            color: #95c9ad;
+            font-size: 0.6em;
+            color: #00ff41;
             margin-bottom: 15px;
-            line-height: 1.4;
+            line-height: 1.6;
         }
         .project-link {
             display: inline-block;
-            background: #7dd3a0;
-            color: #1a1d23;
-            padding: 8px 16px;
+            background: rgba(255, 0, 0, 0.7);
+            color: #00ff41;
+            padding: 10px 18px;
             text-decoration: none;
-            font-size: 0.6em;
-            border: 2px solid #5a9d7a;
+            font-size: 0.65em;
+            border: 2px solid #00ff41;
             transition: all 0.2s ease;
+            min-height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .project-link:hover {
-            background: #5a9d7a;
-            color: #7dd3a0;
+            background: #ff0000;
+            box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
         }
         @media (max-width: 768px) {
             .projects-grid {
@@ -85,7 +91,7 @@
                 gap: 15px;
             }
             h1 {
-                font-size: 1.4em;
+                font-size: 1.5em;
             }
             .project-card {
                 padding: 15px;
@@ -96,13 +102,13 @@
                 grid-template-columns: 1fr;
             }
             h1 {
-                font-size: 1em;
+                font-size: 1.2em;
             }
             .project-card h3 {
-                font-size: 0.7em;
+                font-size: 0.8em;
             }
             .project-card p {
-                font-size: 0.45em;
+                font-size: 0.55em;
             }
         }
     </style>
