--- a/src/noodle_inventory.html
+++ b/src/noodle_inventory.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noodle Inventory - Retro Arcade</title>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,7 +15,7 @@
         body {
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
             font-family: 'Orbitron', sans-serif;
-            color: #00ff88;
+            color: #00ff41;
             min-height: 100vh;
             overflow-x: auto;
             position: relative;
@@ -94,16 +95,16 @@
         }
 
         .header h1 {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 48px;
             margin-bottom: 10px;
-            color: #00ff88;
+            color: #00ff41;
             letter-spacing: 3px;
         }
 
         .header p {
             font-size: 14px;
-            color: #ff00ff;
+            color: #00ffff;
             letter-spacing: 2px;
         }
 
@@ -116,7 +117,7 @@
 
         .panel {
             background: rgba(0, 0, 0, 0.7);
-            border: 3px solid #00ff88;
+            border: 3px solid #00ff41;
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 0 30px rgba(0, 255, 136, 0.3), inset 0 0 20px rgba(0, 255, 136, 0.1);
@@ -142,10 +143,10 @@
         }
 
         .panel-title {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 18px;
             margin-bottom: 20px;
-            color: #ff00ff;
+            color: #00ffff;
             text-shadow: 0 0 10px rgba(255, 0, 255, 0.8);
             letter-spacing: 2px;
             position: relative;
@@ -162,7 +163,7 @@
             display: block;
             margin-bottom: 8px;
             font-size: 12px;
-            color: #00ff88;
+            color: #00ff41;
             text-transform: uppercase;
             letter-spacing: 1px;
             font-weight: 700;
@@ -173,8 +174,8 @@
             width: 100%;
             padding: 12px;
             background: rgba(0, 255, 136, 0.1);
-            border: 2px solid #00ff88;
-            color: #00ff88;
+            border: 2px solid #00ff41;
+            color: #00ff41;
             border-radius: 5px;
             font-family: 'Orbitron', sans-serif;
             font-size: 12px;
@@ -187,7 +188,7 @@
             outline: none;
             background: rgba(0, 255, 136, 0.2);
             box-shadow: 0 0 15px rgba(0, 255, 136, 0.6);
-            border-color: #ff00ff;
+            border-color: #00ffff;
         }
 
         .form-group input::placeholder {
@@ -203,9 +204,9 @@
         button {
             flex: 1;
             padding: 12px 20px;
-            background: linear-gradient(135deg, #00ff88 0%, #00cc6f 100%);
+            background: linear-gradient(135deg, #00ff41 0%, #00cc6f 100%);
             color: #1a1a2e;
-            border: 2px solid #00ff88;
+            border: 2px solid #00ff41;
             border-radius: 5px;
             font-family: 'Orbitron', sans-serif;
             font-size: 12px;
@@ -234,7 +235,7 @@
         button:hover {
             transform: translateY(-2px);
             box-shadow: 0 0 20px rgba(0, 255, 136, 0.8);
-            border-color: #ff00ff;
+            border-color: #00ffff;
         }
 
         button:active {
@@ -268,7 +269,7 @@
 
         .noodle-item {
             background: rgba(0, 255, 136, 0.05);
-            border-left: 4px solid #00ff88;
+            border-left: 4px solid #00ff41;
             padding: 15px;
             margin-bottom: 15px;
             border-radius: 5px;
@@ -321,9 +322,9 @@
         }
 
         .noodle-name {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 14px;
-            color: #ff00ff;
+            color: #00ffff;
             text-shadow: 0 0 10px rgba(255, 0, 255, 0.5);
         }
 
@@ -332,9 +333,9 @@
             padding: 5px 10px;
             border-radius: 3px;
             font-size: 12px;
-            color: #00ff88;
+            color: #00ff41;
             font-weight: 700;
-            border: 1px solid #00ff88;
+            border: 1px solid #00ff41;
         }
 
         .noodle-details {
@@ -355,7 +356,7 @@
         }
 
         .detail-label {
-            color: #00ff88;
+            color: #00ff41;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -396,8 +397,8 @@
 
         .status-fresh {
             background: rgba(0, 255, 136, 0.3);
-            color: #00ff88;
-            border: 1px solid #00ff88;
+            color: #00ff41;
+            border: 1px solid #00ff41;
         }
 
         .status-expiring {
@@ -421,7 +422,7 @@
 
         .stat-card {
             background: rgba(0, 0, 0, 0.7);
-            border: 3px solid #ff00ff;
+            border: 3px solid #00ffff;
             border-radius: 10px;
             padding: 20px;
             text-align: center;
@@ -443,9 +444,9 @@
         }
 
         .stat-value {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 32px;
-            color: #00ff88;
+            color: #00ff41;
             text-shadow: 0 0 15px rgba(0, 255, 136, 0.8);
             margin-bottom: 10px;
             position: relative;
@@ -454,7 +455,7 @@
 
         .stat-label {
             font-size: 11px;
-            color: #ff00ff;
+            color: #00ffff;
             text-transform: uppercase;
             letter-spacing: 1px;
             position: relative;
@@ -484,7 +485,7 @@
             position: fixed;
             top: 100px;
             right: 20px;
-            background: linear-gradient(135deg, #00ff88 0%, #00cc6f 100%);
+            background: linear-gradient(135deg, #00ff41 0%, #00cc6f 100%);
             color: #1a1a2e;
             padding: 15px 25px;
             border-radius: 5px;
@@ -541,8 +542,8 @@
         .filter-btn {
             padding: 8px 15px;
             background: rgba(0, 255, 136, 0.1);
-            border: 2px solid #00ff88;
-            color: #00ff88;
+            border: 2px solid #00ff41;
+            color: #00ff41;
             border-radius: 5px;
             cursor: pointer;
             font-family: 'Orbitron', sans-serif;
@@ -556,7 +557,7 @@
 
         .filter-btn:hover,
         .filter-btn.active {
-            background: linear-gradient(135deg, #00ff88 0%, #00cc6f 100%);
+            background: linear-gradient(135deg, #00ff41 0%, #00cc6f 100%);
             color: #1a1a2e;
             box-shadow: 0 0 15px rgba(0, 255, 136, 0.6);
         }
@@ -565,7 +566,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 12px;
             color: rgba(0, 255, 136, 0.3);
             text-shadow: 0 0 10px rgba(0, 255, 136, 0.2);
@@ -602,7 +603,7 @@
 
             .panel {
                 padding: 20px;
-                border: 2px solid #00ff88;
+                border: 2px solid #00ff41;
             }
 
             .panel-title {
@@ -728,7 +729,7 @@
 
             .panel {
                 padding: 15px;
-                border: 2px solid #00ff88;
+                border: 2px solid #00ff41;
                 border-radius: 8px;
             }
 
@@ -775,7 +776,7 @@
 
             .stat-card {
                 padding: 15px;
-                border: 2px solid #ff00ff;
+                border: 2px solid #00ffff;
                 border-radius: 8px;
             }
 
@@ -797,7 +798,7 @@
             .noodle-item {
                 padding: 12px;
                 margin-bottom: 12px;
-                border-left: 3px solid #00ff88;
+                border-left: 3px solid #00ff41;
             }
 
             .noodle-header {
@@ -1021,7 +1022,7 @@
                 <div class="panel-title">🎮 QUICK STATS 🎮</div>
                 <div style="position: relative; z-index: 1;">
                     <div style="margin-bottom: 20px; padding: 15px; background: rgba(0, 255, 136, 0.05); border-radius: 5px; border: 1px solid rgba(0, 255, 136, 0.3);">
-                        <div style="color: #00ff88; font-size: 12px; margin-bottom: 8px; font-weight: 700; text-transform: uppercase;">INVENTORY STATUS</div>
+                        <div style="color: #00ff41; font-size: 12px; margin-bottom: 8px; font-weight: 700; text-transform: uppercase;">INVENTORY STATUS</div>
                         <div id="inventoryStatus" style="font-size: 13px; line-height: 1.8;">
                             <div style="color: rgba(0, 255, 136, 0.7);">Loading inventory...</div>
                         </div>
